--- a/gleam.toml
+++ b/gleam.toml
@@ -10,6 +10,7 @@ gleam_stdlib = "~> 0.18"
 gun = "> 1.3.0 and < 3.0.0"
 gleam_http = "~> 2.1"
 gleam_erlang = "~> 0.5"
+certifi = "~> 2.8"
 
 [dev-dependencies]
 gleeunit = "~> 0.5"
